docs: winsw